src/pages/form-elements/form-elements.scss
.form-elements {
  &__container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin: 0 141px;

    @media screen and (min-width: $old-phones) and (max-width: $pads) {
      flex-direction: column;
      justify-content: center;
      align-items: center;
      margin: 0;
    }
  }
  &__section {
    width: 320px;
    margin-bottom: 40px;

    @media screen and (min-width: $old-phones) and (max-width: $pads) {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      margin: 0;
    }
  }
    &__block {
      &_222-px {
        width: 222px;
        margin-bottom: 40px;
        
        & .toggle__container {
          margin-bottom: 14px;
        }
        & .like {
          margin-right: 10px;
        }
        & .checkbox__container:not(:last-child) {
          margin-bottom: 8px;
        }
      }
      &_266-px {
        width: 266px;
        margin-bottom: 20px;
        box-sizing: border-box;

        & .rich-checkbox--container {
          margin-bottom: 10px;
          width: 260px;
        }
      }
      &_320-px {
        width: 320px;
        margin-bottom: 20px;
        
        & .rate {
          margin-right: 20px;
          margin-bottom: 40px;
        }
        @media screen  and (min-width: $old-phones) and (max-width: 340px) {
          width: 310px;

          .js-form-elements-pagination {
            width: 320px;
          }
        }
      }
      &-radio {
        display: flex;
      }
    }

    &__button-container {
      &_medium {
        display: inline-block;
        
        height: 44px;
        width: 99px;

        margin-right: 20px;
      }
      &_small {
        display: inline-block;

        margin-right: 20px;
        margin-bottom: 30px;
      }
      &_big {
        height: 44px;
        margin-bottom: 40px;
      }
    }

  &__footer {
    margin-bottom: 40px;
  }
  &__title {
    @include font-h3;
    margin-bottom: 5px;

    &_big {
      @include font-h3;
      margin-bottom: 20px;
    }
  }
}

