fixed overflow in button component #18

--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -82,6 +82,8 @@
       &_small {
         display: inline-block;
 
+        width: 81px;
+
         margin-right: 20px;
         margin-bottom: 30px;
       }
